--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "npx webpack"
+    "build": "tsc",
+    "dev": "tsx watch src/index.ts",
+    "start": "npm run build && node dist/index.js"
   },
   "author": "Ahmed Shebani",
   "license": "ISC",
   "dependencies": {
-    "nodemon-webpack-plugin": "^4.8.2",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.10",
+    "tsx": "^4.16.2"
   }
 }
