--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "author": "Ahmed Shebani",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "^0.7.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.32.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "drizzle-kit": "^0.23.0",
     "tsx": "^4.16.2"
   }
 }
